kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ems-ops
  labels:
    app: ems-ops
