kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: EMS-Ops
  labels:
    app: EMS-Ops
